# cluster-access

./: BUILD  Gopkg.toml  README.md  WORKSPACE  bazel-bin  bazel-cluster-access  bazel-genfiles  bazel-out  bazel-testlogs  cluster-access.sh  clusters.sh  example.md  glide.yaml
backup/: glide.yaml
bash/: .cluster-access.sh.swp  cluster-access.sh  plugin.yaml
cluster-access/cmd/: .access.go.swp  .cluster-access.go.swp  access.go
cluster-access/pkg/access/: .access.go.swp
cluster-access/pkg/access/options/: .options.go.swp
cluster-kube/: test-clusters
cmd/: .access.go.swp  BUILD.bazel  access.go
cmd/access/: BUILD.bazel  access  access.go
hack/: update-bazel.sh
hack/boilerplate/test/: BUILD
pkg/access/: .access.go.swp  BUILD.bazel  access.go
pkg/access/create/: .create.go.swp  BUILD.bazel  create.go
pkg/access/delete/: .delete.go.swp  BUILD.bazel  delete.go
pkg/access/options/: .options.go.swp  BUILD.bazel  options.go
pkg/access/util/: BUILD.bazel  util.go
