load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["access.go"],
    importpath = "k8s.io/cluster-access/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/access:go_default_library",
        "@io_k8s_apiserver//pkg/util/logs:go_default_library",
    ],
)

go_binary(
    name = "cmd",
    embed = [":go_default_library"],
    importpath = "k8s.io/cluster-access/cmd",
    visibility = ["//visibility:public"],
)
