load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

pkg_tar(
        name = "cluster-access",
        srcs = [
                ":access",
                "//:LICENSES",
                "//:SOURCES.md",
                ],
        extension = "tar.gz",
)

go_library(
    name = "go_default_library",
    srcs = ["access.go"],
    importpath = "k8s.io/cluster-access/cmd/access",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/access:go_default_library",
        "//vendor/k8s.io/apiserver/pkg/util/logs:go_default_library",
        "//vedor/k8s.io/client-go/plugin/pkg/client/auth:go_default_library",
    ],
)

go_binary(
    name = "access",
    importpath = "k8s.io/cluster-access/cmd/access",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)
