load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["access.go"],
    importpath = "k8s.io/cluster-access/cmd/access",
    visibility = ["//visibility:private"],
    deps = ["//pkg/access:go_default_library"],
)

go_binary(
    name = "access",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
