load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["create.go"],
    importpath = "k8s.io/cluster-access/pkg/access/create",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/spf13/cobra:go_default_library",
        "//vendor/k8s.io/client-go/util/homedir:go_default_library",
    ],
)
