load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["delete.go"],
    importpath = "k8s.io/cluster-access/pkg/access/delete",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/access/options:go_default_library",
        "//pkg/access/util:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
        "//vendor/github.com/spf13/cobra:go_default_library",
        "//vendor/k8s.io/client-go/rest:go_default_library",
        "//vendor/k8s.io/client-go/tools/clientcmd:go_default_library",
        "//vendor/k8s.io/cluster-registry/pkg/client/clientset_generated/clientset:go_default_library",
    ],
)
