load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["options.go"],
    importpath = "k8s.io/cluster-access/pkg/access/options",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "options",
    embed = [":go_default_library"],
    importpath = "k8s.io/cluster-access/pkg/access/options",
    visibility = ["//visibility:public"],
)
