load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["util.go"],
    importpath = "k8s.io/cluster-access/pkg/access/util",
    visibility = ["//visibility:public"],
    deps = ["//vendor/k8s.io/client-go/tools/clientcmd:go_default_library"],
)
